--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Wikibase\\Elastic\\Test\\": "tests/" }
+      "Wikibase\\Elastic\\Test\\": "tests/"
     }
   }
 }
